syntax = "proto3";

package pomerium.events;
option go_package = "github.com/pomerium/pomerium/pkg/grpc/events";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

// EnvoyConfigurationEvents is a list of envoy configuration events.
message EnvoyConfigurationEvents {
  repeated EnvoyConfigurationEvent values = 1;
}

// EnvoyConfigurationEvent is an envoy configuration event.
message EnvoyConfigurationEvent {
  google.protobuf.Timestamp time = 1;
  string message = 2;
  int32 code = 3;
  repeated google.protobuf.Any details = 4;
  // databroker config version
  uint64 config_version = 5;
  // envoy resource type (i.e. listener, cluster)
  string type_url = 6;
  enum EventKind {
    EVENT_KIND_UNDEFINED = 0;
    // envoy_service_discovery_v3.DeltaDiscoveryRequest
    EVENT_DISCOVERY_REQUEST_ACK = 1;
    EVENT_DISCOVERY_REQUEST_NACK = 2;
    // envoy_service_discovery_v3.DeltaDiscoveryResponse
    EVENT_DISCOVERY_RESPONSE = 3;
  }
  EventKind kind = 7;
  repeated string resource_subscribed = 8;
  repeated string resource_unsubscribed = 9;
  // instance this event originated from
  string instance = 10;
  string nonce = 11;
}
